# semantrix

./: .gitignore  Cargo.toml  README.md  config.yml  start.sh
.github/workflows/: rust.yml
presentation/: presentation.md
resources/templates/: prompt.md  rules.yml
resources/templates/description/: fuzzy_query.md  semantic_query.md  server.md
src/: enums.rs  lib.rs  main.rs
src/repositories/: mod.rs
src/services/: mcp.rs  mod.rs
src/subsystems/: chunker.rs  indexer.rs  lsp.rs  mcp.rs  mod.rs  watcher.rs
