[package]
name = "semantrix"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "^0.4"
tokio = { version = "^1", features = [
    "tracing",
    "macros",
    "rt",
    "rt-multi-thread",
    "io-std",
    "signal",
] }
tokio-tungstenite = "^0.20.1"
async-trait = "0.1.88"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
chrono = { version = "^0.4", features = ["serde"] }
once_cell = "^1.19"
clap = { version = "4.5.38", features = ["derive"] }
async-lsp-client = { version = "0.2.3", features = [] }
lsp-types = "0.94.0"
config = "0.15.11"
strum = { version = "0.27.1", features = ["strum_macros"] }
strum_macros = "0.27.1"
tower-lsp = "0.20.0"
convert_case = "0.8.0"
futures = "0.3.31"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["time", "tracing-log"] }
time = { version = "0.3.41", features = ["macros", "formatting", "parsing"] }
tokio-graceful-shutdown = "0.16.0"
miette = { version = "7.6.0", features = ["fancy"] }
derive_more = { version = "2.0.1", features = ["full"] }
rmcp = { version = "0.1.5", features = ["server", "transport-io"] }
schemars = "0.8.22"
tracing-appender = "0.2.3"
console-subscriber = "0.4.1"
fastembed = "=4.4.0"
rig-core = { version = "0.12.0", features = ["derive"] }
rig-fastembed = "0.1.6"
rig-lancedb = "0.2.10"
lancedb = "0.18.2"
lzma-sys = { version = "*", features = ["static"] }
arrow-array = "54.2.1"
notify-debouncer-full = "0.5.0"
wax = { version = "0.6.0", features = ["walk", "miette"] }
url = "2.5.4"
itertools = "0.14.0"
hf-hub = "0.4.2"
tera = "1.20.0"
regex = "1.11.1"
serde_yaml = "0.9.34"
line-column = "0.1.6"
